# ai-light

./: CHANGELOG.md  README.md
docs/: PROGRESS.md
src/: app.js  styles.css
src-hook/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: aggregator.rs  codex_watcher.rs  hook_installer.rs  ipc.rs  main.rs  project.rs  types.rs
src-tauri/tests/: aggregator_test.rs  integration_test.rs  project_test.rs  types_test.rs
