[package]
name = "ai-light"
version = "0.1.0"
edition = "2021"

[lib]
name = "ai_light"
path = "src/lib.rs"

[[bin]]
name = "ai-light"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
fs2 = "0.4"

[dev-dependencies]
filetime = "0.2"
